--- a/org.jrebirth.af/showcase/undoredo/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/undoredo/src/main/resources/jrebirth.properties
@@ -25,4 +25,4 @@ applicationSceneHeight=744
 applicationSceneBgColor=FFF||1.0
 ##
 
-moduleStarterClass=org.jrebirth.af.showcase.todos.TodosModuleStarter
+moduleStarterClass=org.jrebirth.af.showcase.undoredo.UndoRedoModuleStarter
