--- a/org.jrebirth.af/showcase/wave/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/wave/src/main/resources/jrebirth.properties
@@ -67,3 +67,5 @@ applicationSceneHeight=600
 ## The application scene background color.
 applicationSceneBgColor=FFF||1.0
 ##
+
+moduleStarterClass=org.jrebirth.af.showcase.wave.WaveModuleStarter
