--- a/org.jrebirth.af/showcase/workbench/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/workbench/src/main/resources/jrebirth.properties
@@ -41,3 +41,5 @@ fontsFolder=fonts
 imagesFolder=images
 stylesFolder=styles
 defaultStyleSheet=default
+
+moduleStarterClass=org.jrebirth.af.showcase.workbench.WorkbenchModuleStarter
