--- a/org.jrebirth.af/component/pom.xml
+++ b/org.jrebirth.af/component/pom.xml
@@ -56,6 +56,7 @@
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
@@ -79,7 +80,7 @@
 		</dependency>
 
 
-		<!-- Tests Dependencies -->
+		<!-- Tests Dependencies - - >
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
@@ -100,7 +101,7 @@
 			<artifactId>testfx-junit</artifactId>
 			<version>4.0.1-alpha</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
