--- a/org.jrebirth.af/fxform/pom.xml
+++ b/org.jrebirth.af/fxform/pom.xml
@@ -19,6 +19,12 @@
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
+			<artifactId>api</artifactId>
+			<version>11.0.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
@@ -26,7 +32,7 @@
 		<dependency>
 			<groupId>com.dooapp.fxform2</groupId>
 			<artifactId>core</artifactId>
-			<version>0.2.2</version>
+			<version>8.2.4</version>
 
 			<exclusions>
 				<exclusion>
