--- a/org.jrebirth.af/presentation/pom.xml
+++ b/org.jrebirth.af/presentation/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -20,59 +21,134 @@
 
 	<build>
 		<plugins>
+		
+		<plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+		
+		
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>1.6</version>
-				<executions>
-					<execution>
-						<id>xjc</id>
-						<goals>
-							<goal>xjc</goal>
-						</goals>
-					</execution>
-				</executions>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>xjc</id>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
 
 				<configuration>
-					<schemaDirectory>${basedir}/src/main/resources/presentation/</schemaDirectory>
-					<schemaFiles>Presentation.xsd</schemaFiles>
+					<sources>
+						<source>${basedir}/src/main/resources/presentation/Presentation.xsd</source>
+					</sources>
 					<packageName>org.jrebirth.af.presentation.model</packageName>
 					<outputDirectory>${basedir}/target/generated-sources</outputDirectory>
+
+					<failOnNoSchemas>false</failOnNoSchemas>
+
 				</configuration>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-jxc</artifactId>
+                    <version>2.3.1</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.activation</groupId>
+                    <artifactId>javax.activation-api</artifactId>
+                    <version>1.2.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                    <version>2.4.0-b180725.0427</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-runtime</artifactId>
+                    <version>2.4.0-b180725.0644</version>
+                </dependency>
+            </dependencies>
+				<!--<dependencies>
+					 <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId> 
+						<version>2.4.0-b180830.0359</version> </dependency> <dependency> <groupId>com.sun.xml.bind</groupId> 
+						<artifactId>jaxb-impl</artifactId> <version>2.2.5-b10</version> </dependency> 
+						<dependency> <groupId>javax.activation</groupId> <artifactId>javax.activation-api</artifactId> 
+						<version>1.2.0</version> </dependency> 
+				</dependencies>-->
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-web</artifactId>
 			<version>${openjfx.version}</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId> 
+			<version>${jaxb.version}</version> </dependency> <dependency> <groupId>com.sun.xml.bind</groupId> 
+			<artifactId>jaxb-core</artifactId> <version>${jaxb.version}</version> </dependency> 
+			<dependency> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-impl</artifactId> 
+			<version>${jaxb.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>com.sun.activation</groupId> <artifactId>javax.activation</artifactId> 
+			<version>1.2.0</version> </dependency> -->
+
+<!-- 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>${jaxb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-core</artifactId>
-			<version>${jaxb.version}</version>
+			<version>2.4.0-b180725.0427</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>${jaxb.version}</version>
+			<version>2.3.0</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>javax.activation-api</artifactId>
+			<version>1.2.0</version>
+		</dependency> -->
+		<!-- <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId> 
+			<version>2.3.0</version> </dependency> <dependency> <groupId>org.glassfish.jaxb</groupId> 
+			<artifactId>jaxb-runtime</artifactId> <version>2.3.0</version> <scope>runtime</scope> 
+			</dependency> <dependency> <groupId>javax.activation</groupId> <artifactId>javax.activation-api</artifactId> 
+			<version>1.2.0</version> </dependency> -->
+			
+			
+			        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>        
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
+            <version>1.2.1</version>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
-	
+
 </project>
