--- a/org.jrebirth.af/security/pom.xml
+++ b/org.jrebirth.af/security/pom.xml
@@ -23,6 +23,7 @@
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
+			<classifier>4ide</classifier>
 			<optional>true</optional>
 		</dependency>
 		
