--- a/org.jrebirth.af/showcase/analyzer/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/analyzer/src/main/resources/jrebirth.properties
@@ -68,3 +68,5 @@ applicationSceneHeight=600
 ## The application scene background color.
 applicationSceneBgColor=FFF||1.0
 ##
+
+moduleStarterClass=org.jrebirth.af.showcase.analyzer.AnalyzerModuleStarter
