--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -67,10 +67,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.3</version>
+					<version>3.8.0</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<release>11</release>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
@@ -416,11 +415,11 @@
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>todos</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
