--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -28,7 +28,7 @@
 		<module>undoredo</module>
 		<module>fxml</module>
 		<module>wave</module>
-		<module>todos</module>
+		<!-- <module>todos</module> -->
 		<!-- <module>data</module> -->
 		<module>workbench</module>
 		<module>fonticon</module>
@@ -36,6 +36,24 @@
 
 	<build>
 
+
+		<plugins>
+			<plugin>
+
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.jrebirth.af</groupId>
+							<artifactId>processor</artifactId>
+							<version>11.0.0-SNAPSHOT</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+		</plugins>
+		
 		<resources>
 			<resource>
 				<filtering>false</filtering>
@@ -104,25 +122,33 @@
 			<artifactId>preloader</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
 		
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>component</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>processor</artifactId>
+			<version>11.0.0-SNAPSHOT</version>
+			<classifier>4ide</classifier>
+			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
