Fix presentation module, showcase todos

--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -415,11 +415,11 @@
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
 
-<!-- 		<dependency>
+ 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>todos</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
