--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -28,7 +28,7 @@
 		<module>undoredo</module>
 		<module>fxml</module>
 		<module>wave</module>
-		<!-- <module>todos</module> -->
+		<module>todos</module>
 		<!-- <module>data</module> -->
 		<module>workbench</module>
 		<module>fonticon</module>
