--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -407,6 +407,12 @@
 		<!-- Modules -->
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
+			<artifactId>diagram</artifactId>
+			<version>8.7.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>undoredo</artifactId>
 			<version>8.7.0-SNAPSHOT</version>
 		</dependency>
