Fix Resources output directory for all modules

--- a/org.jrebirth.af/core/pom.xml
+++ b/org.jrebirth.af/core/pom.xml
@@ -15,19 +15,9 @@
 	<name>JRAF RI</name>
 	<description>JRebirth Application Framework Reference Implementation</description>
 
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>
-					<outputDirectory>${project.build.outputDirectory}/org/jrebirth/af/core</outputDirectory>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
+	<properties>
+		<modulePath>org/jrebirth/af/core</modulePath>
+	</properties>
 
 	<dependencies>
 
