--- a/org.jrebirth.af/component/pom.xml
+++ b/org.jrebirth.af/component/pom.xml
@@ -15,19 +15,15 @@
 
 	<name>Component</name>
 	<description>Convenient JRebirth Components to use with JRAF</description>
+	
+	<properties>
+		<modulePath>org/jrebirth/af/component</modulePath>
+	</properties>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>
-					<outputDirectory>${project.build.outputDirectory}/org/jrebirth/af/component</outputDirectory>
-				</configuration>
-			</plugin>
 			
 			<plugin>
-
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
