--- a/org.jrebirth.af/dialog/pom.xml
+++ b/org.jrebirth.af/dialog/pom.xml
@@ -12,6 +12,10 @@
 
 	<name>JRAF Dialog</name>
 	<description>Provide classes to manage dialog opening.</description>
+	
+	<properties>
+		<modulePath>org/jrebirth/af/dialog</modulePath>
+	</properties>
 
 	<dependencies>
 
