--- a/org.jrebirth.af/iconfont-bridge/525icons/pom.xml
+++ b/org.jrebirth.af/iconfont-bridge/525icons/pom.xml
@@ -13,7 +13,11 @@
 	<packaging>jar</packaging>
 
 	<name>IconFont 525Icons</name>
-	<description>Bridge to use 525Isoncs</description>
+	<description>Bridge to use 525Icons</description>
 	<url>http://www.jrebirth.org</url>
 
+	<properties>
+		<modulePath>org/jrebirth/af/iconfontbridge/icons525</modulePath>
+	</properties>
+	
 </project>
