--- a/org.jrebirth.af/iconfont-bridge/emojione/pom.xml
+++ b/org.jrebirth.af/iconfont-bridge/emojione/pom.xml
@@ -16,4 +16,8 @@
 	<description>Bridge to use EmojiOne</description>
 	<url>http://www.jrebirth.org</url>
 
+	<properties>
+		<modulePath>org/jrebirth/af/iconfontbridge/emojione</modulePath>
+	</properties>
+	
 </project>
