--- a/org.jrebirth.af/iconfont-bridge/fontawesome/pom.xml
+++ b/org.jrebirth.af/iconfont-bridge/fontawesome/pom.xml
@@ -16,4 +16,8 @@
 	<description>Bridge to use FontAwesome</description>
 	<url>http://www.jrebirth.org</url>
 
+	<properties>
+		<modulePath>org/jrebirth/af/iconfontbridge/fontawesome</modulePath>
+	</properties>
+	
 </project>
