--- a/org.jrebirth.af/iconfont-bridge/typicons/pom.xml
+++ b/org.jrebirth.af/iconfont-bridge/typicons/pom.xml
@@ -16,4 +16,8 @@
 	<description>Bridge to use Typicons</description>
 	<url>http://www.jrebirth.org</url>
 
+	<properties>
+		<modulePath>org/jrebirth/af/iconfontbridge/typicons</modulePath>
+	</properties>
+	
 </project>
