--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -44,7 +44,7 @@
 		<module>tooling</module>
 		<module>processor</module>
 		<module>component</module>
-		<module>archetype</module>
+		<!-- <module>archetype</module> -->
 		<module>sample</module>
 		<!-- <module>presentation</module> -->
 		<module>transition</module>
@@ -136,10 +136,13 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resource-plugin</artifactId>
-				<version>2.6.0</version>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<outputDirectory>${project.build.outputDirectory}/${modulePath}</outputDirectory>
+				</configuration>
 			</plugin>
-
+			
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-project-info-reports-plugin</artifactId> <version>2.7</version> <dependencies> <dependency> <groupId>org.apache.maven.shared</groupId> 
 				<artifactId>maven-shared-jar</artifactId> <version>1.1</version> <exclusions> <exclusion> <groupId>org.apache.bcel</groupId> <artifactId>bcel</artifactId> </exclusion> </exclusions> </dependency> <dependency> 
 				<groupId>com.google.code.findbugs</groupId> <artifactId>bcel-findbugs</artifactId> <version>6.0</version> </dependency> </dependencies> </plugin> -->
