--- a/org.jrebirth.af/preloader/pom.xml
+++ b/org.jrebirth.af/preloader/pom.xml
@@ -20,6 +20,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<modulePath>org/jrebirth/af/preloader</modulePath>
 	</properties>
 
 	<dependencies>
