--- a/org.jrebirth.af/undoredo/pom.xml
+++ b/org.jrebirth.af/undoredo/pom.xml
@@ -13,6 +13,10 @@
 	<name> Undo/Redo</name>
 	<description>Provide Undo/Redo features for JRebirth commands</description>
 
+	<properties>
+		<modulePath>org/jrebirth/af/undoredo</modulePath>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
