--- a/org.jrebirth.af/component/.settings/org.eclipse.jdt.core.prefs
+++ b/org.jrebirth.af/component/.settings/org.eclipse.jdt.core.prefs
@@ -13,5 +13,5 @@ org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
 org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures=warning
 org.eclipse.jdt.core.compiler.processAnnotations=enabled
-org.eclipse.jdt.core.compiler.release=enabled
+org.eclipse.jdt.core.compiler.release=disabled
 org.eclipse.jdt.core.compiler.source=21
