--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -34,7 +34,7 @@
 
 		<maven.version>3.9.5</maven.version>
 
-		<openjfx.version>21.0.1</openjfx.version>
+		<openjfx.version>21.0.3-ea+1</openjfx.version>
 
 		<surefire.version>2.18.1</surefire.version>
 		<slf4j.version>2.0.10</slf4j.version>
