--- a/org.jrebirth.af/api/pom.xml
+++ b/org.jrebirth.af/api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
+		<version>${jrebirth.version}</version>
 	</parent>
 
 	<groupId>org.jrebirth.af</groupId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
+			<version>2.0.12</version>
 		</dependency>
 
 	</dependencies>
