--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<artifactId>af</artifactId>
-	<version>8.7.0-SNAPSHOT</version>
+	<version>${jrebirth.version}</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
@@ -20,6 +20,7 @@
 	<inceptionYear>2011</inceptionYear>
 
 	<properties>
+		<jrebirth.version>8.7.0</jrebirth.version>
 		<EclipseDay-version>3.0.0</EclipseDay-version>
 		<Breizhcamp-version>3.0.0</Breizhcamp-version>
 		<EclipseCON-version>3.0.0</EclipseCON-version>
