--- a/org.jrebirth.af/resources/pom.xml
+++ b/org.jrebirth.af/resources/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jrebirth</groupId>
     <artifactId>af</artifactId>
-    <version>8.7.0-SNAPSHOT</version>
+    <version>${jrebirth.version}</version>
   </parent>
   <groupId>org.jrebirth.af</groupId>
   <artifactId>resources</artifactId>
