--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -3,8 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<version>${jrebirth.version}</version>
 	</parent>
 
 	<groupId>org.jrebirth.af.showcase</groupId>
@@ -149,7 +148,7 @@
 								</classPath>
 								<icon>${exeIcon}</icon>
 								<jre>
-									<minVersion>1.8.0</minVersion>
+									<minVersion>11</minVersion>
 									<jdkPreference>preferJre</jdkPreference>
 								</jre>
 								<versionInfo>
@@ -400,7 +399,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -408,36 +407,36 @@
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>undoredo</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>fxml</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>todos</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>fonticon</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>wave</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af.showcase</groupId>
 			<artifactId>workbench</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 	</dependencies>
