--- a/org.jrebirth.af/showcase/todos/pom.xml
+++ b/org.jrebirth.af/showcase/todos/pom.xml
@@ -4,8 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<version>${jrebirth.version}</version>
 	</parent>
 
 	<groupId>org.jrebirth.af.showcase</groupId>
@@ -43,7 +42,7 @@
 			<plugin>
 				<groupId>org.jrebirth.af.tooling</groupId>
 				<artifactId>jrebirth-maven-plugin</artifactId>
-				<version>8.7.0-SNAPSHOT</version>
+				<version>${project.version}</version>
 				<configuration>
 					<ecoreFile>model/Todos.ecore</ecoreFile>
 					<outputDirectory>${project.build.directory}/generated-sources/model</outputDirectory>
@@ -83,14 +82,14 @@
  		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af.iconfont-bridge</groupId>
 			<artifactId>fontawesome</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
