--- a/org.jrebirth.af/showcase/undoredo/pom.xml
+++ b/org.jrebirth.af/showcase/undoredo/pom.xml
@@ -4,8 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<version>${jrebirth.version}</version>
 	</parent>
 
 	<groupId>org.jrebirth.af.showcase</groupId>
@@ -37,12 +36,12 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>undoredo</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
