--- a/org.jrebirth.af/tooling/codegen/pom.xml
+++ b/org.jrebirth.af/tooling/codegen/pom.xml
@@ -4,8 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>tooling</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<version>${jrebirth.version}</version>
 	</parent>
 
 	<groupId>org.jrebirth.af.tooling</groupId>
