--- a/org.jrebirth.af/tooling/ecore2fx/pom.xml
+++ b/org.jrebirth.af/tooling/ecore2fx/pom.xml
@@ -3,8 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>tooling</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<version>${jrebirth.version}</version>
 	</parent>
 	
 	<groupId>org.jrebirth.af.tooling</groupId>
@@ -41,7 +40,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af.tooling</groupId>
 			<artifactId>codegen</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 
