--- a/org.jrebirth.af/undoredo/pom.xml
+++ b/org.jrebirth.af/undoredo/pom.xml
@@ -2,9 +2,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jrebirth</groupId>
-		<version>8.7.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
 		<artifactId>af</artifactId>
+		<version>${jrebirth.version}</version>
 	</parent>
 	<groupId>org.jrebirth.af</groupId>
 	<artifactId>undoredo</artifactId>
@@ -18,7 +17,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
