Fix Preloader Guarantee an unique resource location among all modules (recopy resources content)

--- a/org.jrebirth.af/resources/pom.xml
+++ b/org.jrebirth.af/resources/pom.xml
@@ -10,4 +10,8 @@
 	<name>JRAF Resources</name>
 	<description>Module embedding default resources for JRebirth Application Framework</description>
 
+	<properties>
+		<resources.base.path>org/jrebirth/af/resources</resources.base.path>
+	</properties>
+	
 </project>
