Repair Style and font usage for sample application

--- a/org.jrebirth.af/sample/pom.xml
+++ b/org.jrebirth.af/sample/pom.xml
@@ -41,6 +41,7 @@
 			<resource>
 				<filtering>true</filtering>
 				<directory>${basedir}/src/main/resources</directory>
+				<targetPath>${resources.base.path}</targetPath>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
@@ -51,6 +52,7 @@
 			<resource>
 				<filtering>false</filtering>
 				<directory>${basedir}/src/main/resources</directory>
+				<targetPath>${resources.base.path}</targetPath>
 				<includes>
 					<include>**/*.ttf</include>
 				</includes>
